--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -112,6 +112,8 @@
     </style>
 
     <style name="HedvigButton.Outlined.White">
+        <item name="android:paddingStart">12dp</item>
+        <item name="android:paddingEnd">12dp</item>
         <item name="android:background">@drawable/button_border_white</item>
         <item name="android:textColor">@color/off_white</item>
     </style>
