--- a/app/src/main/res/values-v29/styles.xml
+++ b/app/src/main/res/values-v29/styles.xml
@@ -10,10 +10,7 @@
     </style>
 
     <style name="Hedvig.Theme.Chat">
-        <item name="android:windowLightNavigationBar">false</item>
-        <item name="android:windowTranslucentStatus">false</item>
-        <item name="android:windowTranslucentNavigation">false</item>
-        <item name="android:navigationBarColor">@android:color/black</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@color/background_semi_transparent</item>
+        <item name="android:statusBarColor">@color/transparent</item>
     </style>
 </resources>
