restored default theme

--- a/app/src/main/res/values-v27/styles.xml
+++ b/app/src/main/res/values-v27/styles.xml
@@ -2,15 +2,11 @@
 <resources>
 
     <style name="Hedvig.Theme.V27" parent="Hedvig.Theme.V23">
+        <item name="android:navigationBarColor">@color/background</item>
         <item name="android:windowLightNavigationBar">@bool/light_system_ui</item>
-        <item name="android:navigationBarDividerColor">@android:color/transparent</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
-    <style name="Hedvig.Theme" parent="Hedvig.Theme.V27">
-        <item name="android:navigationBarColor">@color/background_semi_transparent</item>
-        <item name="android:statusBarColor">@color/transparent</item>
-    </style>
+    <style name="Hedvig.Theme" parent="Hedvig.Theme.V27" />
 
     <style name="Hedvig.Theme.Offer">
         <item name="android:statusBarColor">@color/offer_background</item>
