Some real text keys

--- a/app/src/main/res/layout/activity_create_key_gear_item.xml
+++ b/app/src/main/res/layout/activity_create_key_gear_item.xml
@@ -30,16 +30,13 @@
                 tools:itemCount="2"
                 tools:listitem="@layout/create_key_gear_item_photo" />
 
-            <!-- TODO: Text Key -->
             <TextView
                 style="@style/Body.Regular"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/base_margin_triple"
                 android:layout_marginTop="@dimen/base_margin_quadruple"
-                android:text="Typ av pryl" />
-
-            <!-- TODO, Another task: Tag View -->
+                android:text="@string/KEY_GEAR_ADD_ITEM_TYPE_HEADLINE" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/categories"
@@ -57,7 +54,6 @@
 
     </androidx.core.widget.NestedScrollView>
 
-    <!-- TODO: Text Key -->
     <Button
         android:id="@+id/save"
         style="@style/HedvigButton"
@@ -68,7 +64,7 @@
         android:layout_marginEnd="@dimen/base_margin_quadruple"
         android:layout_marginBottom="@dimen/base_margin_quadruple"
         android:backgroundTint="@color/purple"
-        android:text="Spara"
+        android:text="@string/KEY_GEAR_ADD_ITEM_SAVE_BUTTON"
         android:textColor="@color/white"
         android:translationY="140dp"
         android:visibility="gone"
