--- a/app/src/main/res/menu/logged_in_menu.xml
+++ b/app/src/main/res/menu/logged_in_menu.xml
@@ -10,11 +10,10 @@
         android:icon="@drawable/ic_claims"
         android:title="@string/TAB_TITLE_CLAIM" />
 
-    <!-- TODO: Text Key -->
     <item
         android:id="@+id/key_gear"
         android:icon="@drawable/ic_claims"
-        android:title="Prylbanken" />
+        android:title="@string/KEY_GEAR_TAB_TITLE" />
 
     <item
         android:id="@+id/referrals"
