--- a/app/src/main/res/layout/create_key_gear_item_new_photo.xml
+++ b/app/src/main/res/layout/create_key_gear_item_new_photo.xml
@@ -21,14 +21,13 @@
         app:layout_constraintVertical_chainStyle="packed"
         app:srcCompat="@drawable/ic_add_photo" />
 
-    <!-- TODO: Text Key -->
     <TextView
         android:id="@+id/addPhotoLabel"
         style="@style/Body.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/base_margin"
-        android:text="Lägg till foto"
+        android:text="@string/KEY_GEAR_ADD_ITEM_ADD_PHOTO_BUTTON"
         android:textColor="@color/purple"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
