--- a/app/src/debug/res/layout/activity_development.xml
+++ b/app/src/debug/res/layout/activity_development.xml
@@ -37,6 +37,15 @@
             android:prompt="@string/mock_personas_prompt" />
 
         <Button
+            android:id="@+id/openCoverageSheet"
+            style="@style/HedvigButton.Purple"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/base_margin_double"
+            android:text="Open coverage sheet" />
+
+        <Button
             android:id="@+id/openWhatsNew"
             style="@style/HedvigButton.Purple"
             android:layout_width="wrap_content"
