--- a/app/src/main/res/values-v23/styles.xml
+++ b/app/src/main/res/values-v23/styles.xml
@@ -8,6 +8,11 @@
 
     <style name="Hedvig.Theme" parent="Hedvig.Theme.V23" />
 
+    <style name="Hedvig.Theme.Transparent">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsTranslucent">true</item>
+    </style>
+
     <style name="Hedvig.Theme.Offer">
         <item name="android:statusBarColor">@color/dark_purple</item>
         <item name="android:windowLightStatusBar">false</item>
