--- a/app/src/main/res/layout/coverage_info_layout.xml
+++ b/app/src/main/res/layout/coverage_info_layout.xml
@@ -33,7 +33,7 @@
                 style="@style/Headline.Medium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Ersättning" />
+                tools:text="Ersättning" />
 
             <TextView
                 android:id="@+id/bulletPointDescription"
@@ -42,7 +42,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/base_margin"
                 android:lineSpacingExtra="0dp"
-                android:text="Hedvig täcker hela kostnaden för en reparation minus självrisk (1 500 kr) eller det uppskattade värdet på telefonen minus självrisk om den inte går att reparera " />
+                tools:text="Hedvig täcker hela kostnaden för en reparation minus självrisk (1 500 kr) eller det uppskattade värdet på telefonen minus självrisk om den inte går att reparera" />
         </LinearLayout>
 
     </LinearLayout>
