--- a/app/src/main/res/layout/activity_create_key_gear_item.xml
+++ b/app/src/main/res/layout/activity_create_key_gear_item.xml
@@ -42,9 +42,9 @@
                 android:id="@+id/categories"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
+                android:layout_marginStart="@dimen/base_margin_sesqui"
                 android:layout_marginTop="@dimen/base_margin"
-                android:layout_marginEnd="12dp"
+                android:layout_marginEnd="@dimen/base_margin_sesqui"
                 android:orientation="horizontal"
                 app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                 tools:itemCount="5"
