--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -85,6 +85,7 @@
         android:id="@+id/messages"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:paddingTop="@dimen/base_margin"
         android:paddingBottom="@dimen/base_margin_triple"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
