moved padding to dimens

--- a/app/src/main/res/layout/feature_bubbles.xml
+++ b/app/src/main/res/layout/feature_bubbles.xml
@@ -227,8 +227,8 @@
         style="@style/HedvigButton.Outlined.White"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingStart="12dp"
-        android:paddingEnd="12dp"
+        android:paddingStart="@dimen/button_border_white_padding"
+        android:paddingEnd="@dimen/button_border_white_padding"
         android:layout_marginTop="@dimen/base_margin_double"
         android:layout_marginBottom="@dimen/base_margin"
         app:layout_constraintTop_toBottomOf="@id/deductibleBubble"
@@ -244,8 +244,8 @@
         style="@style/HedvigButton.Outlined.White"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingStart="12dp"
-        android:paddingEnd="12dp"
+        android:paddingStart="@dimen/button_border_white_padding"
+        android:paddingEnd="@dimen/button_border_white_padding"
         android:layout_marginTop="@dimen/base_margin"
         android:layout_marginBottom="@dimen/button_shadow_offset"
         app:layout_constraintEnd_toEndOf="parent"
