Item detail photo pager

--- a/app/src/main/res/layout/activity_key_gear_item_detail.xml
+++ b/app/src/main/res/layout/activity_key_gear_item_detail.xml
@@ -7,4 +7,9 @@
     android:orientation="vertical"
     tools:context=".feature.keygear.ui.itemdetail.KeyGearItemDetailActivity">
 
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/photos"
+        android:layout_width="match_parent"
+        android:layout_height="450dp" />
+
 </LinearLayout>
