--- a/app/src/main/res/layout/date_pick_layout.xml
+++ b/app/src/main/res/layout/date_pick_layout.xml
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/dateContainer"
-    android:layout_height="wrap_content"
-    android:layout_width="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/datePickLayout"
         android:layout_width="match_parent"
         android:layout_height="@dimen/base_margin_sextuple"
-        android:background="@drawable/background_pick_date"
         android:layout_gravity="bottom"
+        android:background="@drawable/background_pick_date"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -25,32 +21,31 @@
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/base_margin_triple"
+            android:contentDescription="@null"
             android:src="@drawable/ic_arrow_drop_down"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:contentDescription="@null" />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
         android:id="@+id/dateHint"
         style="@style/Body"
-        android:layout_gravity="center_vertical"
-        android:background="@color/background_elevation_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:layout_marginStart="@dimen/base_margin_double"
+        android:background="@color/background_elevation_1"
         android:text="@string/DATE_BTN_PLACEHOLDER"
         app:layout_constraintBottom_toBottomOf="@id/datePickLayout"
         app:layout_constraintStart_toStartOf="@id/datePickLayout"
         app:layout_constraintTop_toTopOf="@+id/datePickLayout" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</merge>
