--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -155,5 +155,6 @@
     <dimen name="button_border_white_corner_radius">120dp</dimen>
     <dimen name="date_pick_button_height">60dp</dimen>
     <dimen name="base_margin_sesqui">12dp</dimen>
+    <dimen name="top_bar_elevation">2dp</dimen>
 
 </resources>
