--- a/app/src/main/res/layout/key_gear_item.xml
+++ b/app/src/main/res/layout/key_gear_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    tools:layout_height="200dp"
+    android:id="@+id/keyGearItemRoot"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/key_gear_card_height"
     tools:layout_width="160dp">
 
     <ImageView
