--- a/app/src/main/res/layout/key_gear_item.xml
+++ b/app/src/main/res/layout/key_gear_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/keyGearItemRoot"
     android:layout_width="match_parent"
@@ -14,6 +15,12 @@
         android:contentDescription="@null"
         tools:src="@drawable/ic_fire_green" />
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:contentDescription="@null"
+        app:srcCompat="@drawable/key_gear_item_photo_gradient" />
+
     <TextView
         android:id="@+id/itemCategory"
         style="@style/Body.Small"
@@ -22,7 +29,6 @@
         android:layout_gravity="center_horizontal|bottom"
         android:layout_marginBottom="@dimen/base_margin_double"
         android:textColor="@color/white"
-        tools:text="Mobiltelefon"
-        tools:textColor="@color/black" />
+        tools:text="Mobiltelefon" />
 
 </FrameLayout>
