--- a/app/src/main/res/layout/create_key_gear_item_new_photo.xml
+++ b/app/src/main/res/layout/create_key_gear_item_new_photo.xml
@@ -7,6 +7,7 @@
     android:background="@drawable/background_rounded_corners_ripple"
     android:backgroundTint="@color/violet_100"
     android:clickable="true"
+    android:elevation="2dp"
     android:focusable="true"
     android:transitionName="addItemRoot">
 
