--- a/app/src/main/res/layout/create_key_gear_item_photo.xml
+++ b/app/src/main/res/layout/create_key_gear_item_photo.xml
@@ -5,4 +5,5 @@
     android:layout_width="@dimen/create_key_gear_add_photo_height"
     android:layout_height="@dimen/create_key_gear_add_photo_height"
     android:contentDescription="@null"
+    android:elevation="2dp"
     tools:src="@drawable/ic_fire_green" />
